chore: remove duplicated code

--- a/Code/User/partials/keybindings/extensions/extensions.json
+++ b/Code/User/partials/keybindings/extensions/extensions.json
@@ -2,6 +2,6 @@
 	{
 		"key": "ctrl+o",
 		"command": "workbench.extensions.action.installExtensions",
-		"when": "!sideBarVisible && neovim.mode != insert"
+		"when": "!sideBarVisible && neovim.mode != insert && !inSearchEditor"
 	}
 ]
