--- a/Code/User/partials/settings/core/extensions.json
+++ b/Code/User/partials/settings/core/extensions.json
@@ -4,5 +4,7 @@
 	"extensions.experimental.affinity": {
 		"asvetliakov.vscode-neovim": 1
 	},
-	"extensions.ignoreRecommendations": true
+	"extensions.ignoreRecommendations": true,
+	"extensions.autoCheckUpdates": false,
+	"extensions.autoUpdate": false
 }
