--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -32,11 +32,30 @@
 	"editor.inlineSuggest.syntaxHighlightingEnabled": true,
 	"editor.codeLens": false,
 	"editor.suggest.preview": true,
+	"editor.acceptSuggestionOnCommitCharacter": false,
+	"editor.acceptSuggestionOnEnter": "smart",
+	"editor.suggestOnTriggerCharacters": true,
+	"editor.wordBasedSuggestions": "off",
+	"editor.parameterHints.enabled": false,
+	"editor.unicodeHighlight.ambiguousCharacters": false,
+	"editor.unicodeHighlight.invisibleCharacters": false,
+	"editor.accessibilitySupport": "off",
+	"editor.find.autoFindInSelection": "multiline",
+	"editor.gotoLocation.multipleReferences": "goto",
+	"editor.gotoLocation.multipleDefinitions": "goto",
+	"editor.hover.delay": 300,
+	"editor.quickSuggestions": {
+		"other": "on",
+		"comments": "off",
+		"strings": "off"
+	},
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
 		"asvetliakov.vscode-neovim": 1
 	},
 	"extensions.ignoreRecommendations": true,
+	"extensions.autoCheckUpdates": false,
+	"extensions.autoUpdate": false,
 	"explorer.confirmDelete": false,
 	"explorer.confirmDragAndDrop": false,
 	"files.enableTrash": false,
@@ -51,6 +70,17 @@
 		"package-lock.json": true,
 		"pnpm-lock.yaml": true
 	},
+	"files.watcherExclude": {
+		"**/.git/objects/**": true,
+		"**/.git/subtree-cache/**": true,
+		"**/node_modules/**": true,
+		"**/tmp/**": true,
+		"**/dist/**": true,
+		"**/.next/**": true,
+		"**/target/**": true,
+		"**/.gradle/**": true,
+		"**/build/**": true
+	},
 	"keyboard.dispatch": "keyCode",
 	"telemetry.telemetryLevel": "all",
 	"update.showReleaseNotes": false,
@@ -62,6 +92,33 @@
 	"search.smartCase": true,
 	"search.showLineNumbers": true,
 	"search.useIgnoreFiles": false,
+	"search.searchOnType": false,
+	"search.followSymlinks": false,
+	"search.maxResults": 1000,
+	"search.searchEditor.defaultNumberOfContextLines": 1,
+	"search.searchEditor.reusePriorSearchConfiguration": true,
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/coverage": true,
+		"**/dist": true,
+		"**/build": true,
+		"**/.git": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		"**/*.min.js": true,
+		"**/*.min.css": true,
+		"**/logs": true,
+		"**/tmp": true,
+		"**/temp": true,
+		"**/.cache": true,
+		"**/CachedData": true,
+		"**/Cache": true,
+		"**/History": true,
+		"**/SharedStorage": true,
+		"**/blob_storage": true,
+		"**/*.lock": true
+	},
 	"security.workspace.trust.untrustedFiles": "open",
 	"security.workspace.trust.startupPrompt": "never",
 	"security.workspace.trust.enabled": false,
@@ -111,6 +168,8 @@
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
 	"workbench.editor.closeOnFileDelete": true,
+	"workbench.editor.limit.enabled": true,
+	"workbench.editor.limit.value": 10,
 	"animations.Install-Method": "Custom CSS and JS",
 	"animations.Enabled": true,
 	"animations.Scrolling": "Fade",
@@ -849,6 +908,8 @@
 	"typescript.suggest.completeFunctionCalls": true,
 	"typescript.suggest.includeAutomaticOptionalChainCompletions": true,
 	"typescript.autoClosingTags": true,
+	"typescript.disableAutomaticTypeAcquisition": true,
+	"typescript.tsserver.useSeparateSyntaxServer": true,
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
@@ -861,5 +922,10 @@
 	"gitlens.telemetry.enabled": false,
 	"gitlens.statusBar.enabled": false,
 	"gitlens.codeLens.recentChange.enabled": false,
-	"gitlens.codeLens.authors.enabled": false
+	"gitlens.codeLens.authors.enabled": false,
+	"git.decorations.enabled": true,
+	"git.timeline.showAuthor": false,
+	"git.timeline.showUncommitted": false,
+	"diffEditor.renderSideBySide": true,
+	"merge-conflict.autoNavigateNextConflict.enabled": true
 }
