feat: update search config

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -90,13 +90,15 @@
 	"makefile.configureOnOpen": true,
 	"diffEditor.ignoreTrimWhitespace": false,
 	"search.smartCase": true,
-	"search.showLineNumbers": true,
+	"search.showLineNumbers": false,
 	"search.useIgnoreFiles": false,
-	"search.searchOnType": false,
+	"search.searchOnType": true,
+	"search.searchOnTypeDebounceTime": 500,
 	"search.followSymlinks": false,
 	"search.maxResults": 1000,
 	"search.searchEditor.defaultNumberOfContextLines": 1,
 	"search.searchEditor.reusePriorSearchConfiguration": true,
+	"search.searchEditor.showLineNumbers": false,
 	"search.exclude": {
 		"**/node_modules": true,
 		"**/bower_components": true,
