feat: disable some vscode feature

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -5,10 +5,12 @@
 	"editor.inlineSuggest.enabled": true,
 	"editor.cursorSmoothCaretAnimation": "on",
 	"editor.inlayHints.enabled": "off",
+	"editor.hover.enabled": false,
 	"editor.formatOnPaste": true,
 	"editor.tabSize": 2,
 	"editor.fontSize": 14,
 	"editor.renderWhitespace": "trailing",
+	"editor.renderLineHighlight": "gutter",
 	"editor.lineHeight": 1.2,
 	"editor.codeActionsOnSave": {},
 	"editor.fontFamily": "FiraCode Nerd Font",
@@ -20,12 +22,17 @@
 	"editor.minimap.enabled": false,
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.cursorBlinking": "smooth",
-	"editor.stickyScroll.enabled": false,
+	"editor.stickyScroll.enabled": true,
 	"editor.matchBrackets": "always",
 	"editor.guides.bracketPairs": "active",
-	"editor.scrollbar.horizontalScrollbarSize": 0,
+	"editor.scrollbar.horizontal": "hidden",
 	"editor.scrollbar.verticalScrollbarSize": 5,
+	"editor.overviewRulerBorder": false,
+	"editor.glyphMargin": false,
 	"editor.showFoldingControls": "never",
+	"editor.rulers": [
+		120
+	],
 	"editor.lightbulb.enabled": "off",
 	"editor.experimental.treeSitterTelemetry": false,
 	"editor.formatOnSaveMode": "modificationsIfAvailable",
@@ -34,6 +41,7 @@
 	"editor.suggest.preview": true,
 	"editor.acceptSuggestionOnCommitCharacter": false,
 	"editor.acceptSuggestionOnEnter": "smart",
+	"editor.snippetSuggestions": "inline",
 	"editor.suggestOnTriggerCharacters": true,
 	"editor.wordBasedSuggestions": "off",
 	"editor.parameterHints.enabled": false,
@@ -44,22 +52,28 @@
 	"editor.gotoLocation.multipleReferences": "goto",
 	"editor.gotoLocation.multipleDefinitions": "goto",
 	"editor.hover.delay": 300,
+	"editor.bracketPairColorization.enabled": true,
+	"editor.guides.bracketPairsHorizontal": true,
 	"editor.quickSuggestions": {
 		"other": "on",
 		"comments": "off",
 		"strings": "off"
 	},
+	"explorer.openEditors.visible": 1,
+	"explorer.decorations.badges": false,
+	"explorer.decorations.colors": true,
+	"explorer.confirmDelete": false,
+	"explorer.confirmDragAndDrop": false,
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
 		"asvetliakov.vscode-neovim": 1
 	},
 	"extensions.ignoreRecommendations": true,
-	"extensions.autoCheckUpdates": false,
-	"extensions.autoUpdate": false,
-	"explorer.confirmDelete": false,
-	"explorer.confirmDragAndDrop": false,
+	"extensions.autoCheckUpdates": true,
+	"extensions.autoUpdate": true,
 	"files.enableTrash": false,
 	"files.hotExit": "onExitAndWindowClose",
+	"files.simpleDialog.enable": true,
 	"files.exclude": {
 		"**/dist": true,
 		"**/.next": true,
@@ -82,15 +96,19 @@
 		"**/build/**": true
 	},
 	"keyboard.dispatch": "keyCode",
-	"telemetry.telemetryLevel": "all",
+	"telemetry.telemetryLevel": "off",
 	"update.showReleaseNotes": false,
 	"notebook.gotoSymbols.showAllSymbols": false,
 	"breadcrumbs.enabled": true,
 	"breadcrumbs.symbolSortOrder": "type",
+	"outline.icons": false,
 	"makefile.configureOnOpen": true,
 	"diffEditor.ignoreTrimWhitespace": false,
 	"search.smartCase": true,
 	"search.showLineNumbers": false,
+	"search.decorations.badges": false,
+	"search.decorations.colors": false,
+	"search.collapseResults": "alwaysCollapse",
 	"search.useIgnoreFiles": false,
 	"search.searchOnType": true,
 	"search.searchOnTypeDebounceTime": 500,
@@ -124,10 +142,13 @@
 	"security.workspace.trust.untrustedFiles": "open",
 	"security.workspace.trust.startupPrompt": "never",
 	"security.workspace.trust.enabled": false,
+	"security.workspace.trust.banner": "never",
 	"terminal.integrated.copyOnSelection": true,
 	"terminal.integrated.cursorBlinking": true,
 	"terminal.explorerKind": "external",
-	"terminal.external.linuxExec": "",
+	"terminal.external.linuxExec": "wezterm",
+	"terminal.integrated.tabs.enabled": false,
+	"terminal.integrated.showExitAlert": false,
 	"terminal.integrated.smoothScrolling": true,
 	"terminal.integrated.gpuAcceleration": "on",
 	"terminal.integrated.defaultLocation": "editor",
@@ -164,9 +185,12 @@
 	"workbench.activityBar.location": "hidden",
 	"workbench.editor.showTabs": "multiple",
 	"workbench.layoutControl.type": "menu",
+	"workbench.reduceMotion": "on",
 	"workbench.editor.tabActionCloseVisibility": false,
 	"workbench.editor.tabActionUnpinVisibility": false,
 	"workbench.editor.splitOnDragAndDrop": false,
+	"workbench.editor.decorations.colors": false,
+	"workbench.editor.decorations.badges": false,
 	"workbench.welcomePage.walkthroughs.openOnInstall": false,
 	"workbench.tree.indent": 15,
 	"workbench.editor.closeOnFileDelete": true,
@@ -928,6 +952,10 @@
 	"git.decorations.enabled": true,
 	"git.timeline.showAuthor": false,
 	"git.timeline.showUncommitted": false,
+	"gitlens.mode.statusBar.enabled": false,
+	"gitlens.graph.statusBar.enabled": false,
+	"gitlens.codeLens.enabled": false,
+	"gitlens.hovers.enabled": false,
 	"diffEditor.renderSideBySide": true,
 	"merge-conflict.autoNavigateNextConflict.enabled": true
 }
