--- a/Code/User/partials/settings/core/extensions.json
+++ b/Code/User/partials/settings/core/extensions.json
@@ -5,6 +5,6 @@
 		"asvetliakov.vscode-neovim": 1
 	},
 	"extensions.ignoreRecommendations": true,
-	"extensions.autoCheckUpdates": false,
-	"extensions.autoUpdate": false
+	"extensions.autoCheckUpdates": true,
+	"extensions.autoUpdate": true
 }
