feat: support cursor

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -12,7 +12,7 @@
 	"editor.renderWhitespace": "trailing",
 	"editor.renderLineHighlight": "gutter",
 	"editor.lineHeight": 1.2,
-	"editor.codeActionsOnSave": { },
+	"editor.codeActionsOnSave": {},
 	"editor.fontFamily": "FiraCode Nerd Font",
 	"editor.fontLigatures": true,
 	"editor.insertSpaces": false,
@@ -56,6 +56,13 @@
 		"comments": "off",
 		"strings": "off"
 	},
+	"explorer.openEditors.visible": 1,
+	"explorer.decorations.badges": false,
+	"explorer.decorations.colors": true,
+	"explorer.confirmDelete": false,
+	"explorer.confirmDragAndDrop": false,
+	"files.enableTrash": false,
+	"files.confirmDelete": false,
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
 		"asvetliakov.vscode-neovim": 1
@@ -63,9 +70,6 @@
 	"extensions.ignoreRecommendations": true,
 	"extensions.autoCheckUpdates": true,
 	"extensions.autoUpdate": true,
-	"explorer.confirmDelete": false,
-	"explorer.confirmDragAndDrop": false,
-	"files.enableTrash": false,
 	"files.hotExit": "onExitAndWindowClose",
 	"files.simpleDialog.enable": true,
 	"files.exclude": {
@@ -98,6 +102,7 @@
 	"outline.icons": false,
 	"makefile.configureOnOpen": true,
 	"diffEditor.ignoreTrimWhitespace": false,
+	"workbench.colorTheme": "Default Dark Modern",
 	"search.smartCase": true,
 	"search.showLineNumbers": false,
 	"search.decorations.badges": false,
@@ -236,8 +241,8 @@
 		"rgba(255,127,255,0.07)",
 		"rgba(79,236,236,0.07)"
 	],
-	"vscode-neovim.ctrlKeysForInsertMode": [ ],
-	"vscode-neovim.ctrlKeysForNormalMode": [ ],
+	"vscode-neovim.ctrlKeysForInsertMode": [],
+	"vscode-neovim.ctrlKeysForNormalMode": [],
 	"vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
 	"outline.showArrays": false,
 	"outline.showBooleans": false,
@@ -933,6 +938,45 @@
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
+	"cursor.chat.alwaysSearchWeb": false,
+	"cursor.chat.showSuggestedQuestions": true,
+	"cursor.chat.maxCompletionTokens": 4000,
+	"cursor.chat.contextLength": 8000,
+	"cursor.cpp.enablePartialAccepts": true,
+	"cursor.cpp.partialAcceptThreshold": 0.5,
+	"cursor.cpp.disabledLanguages": [],
+	"cursor.cpp.maxPrefixLengthForSingleLine": 100,
+	"cursor.cpp.maxSuffixLengthForSingleLine": 100,
+	"cursor.cpp.enablePartialAcceptsInSnippetMode": true,
+	"cursor.general.enableModelSelection": true,
+	"cursor.general.defaultModel": "claude-4-sonet",
+	"cursor.general.fastModel": "gpt-4o-mini",
+	"cursor.privacy.anonymizedTelemetry": true,
+	"cursor.privacy.enableTelemetry": false,
+	"cursor.general.enableIndexing": true,
+	"cursor.general.enableDocs": true,
+	"cursor.general.enableShadowWorkspace": true,
+	"cursor.general.enableAutoSaveBeforeChat": true,
+	"cursor.general.enableCodeLens": true,
+	"cursor.chat.showChatWelcomeMessage": false,
+	"cursor.general.enableInlineChat": true,
+	"cursor.general.enableComposer": true,
+	"cursor.general.showComposerInSidebar": true,
+	"cursor.general.enableDiff": true,
+	"cursor.general.enableSyntaxHighlighting": true,
+	"cursor.general.enableAutoApply": false,
+	"cursor.general.enableSmartSelection": true,
+	"cursor.general.enableCursorless": false,
+	"cursor.general.enableMultipleProviders": true,
+	"cursor.general.enableCustomInstructions": true,
+	"cursor.general.enableWorkspaceContext": true,
+	"cursor.general.enableGitContext": true,
+	"cursor.general.enableFileContext": true,
+	"cursor.general.maxFileContextLength": 20000,
+	"cursor.general.requestTimeout": 120000,
+	"cursor.general.disableTimeouts": true,
+	"cursor.general.maxRequestDuration": 300000,
+	"cursor.cpp.requestTimeout": 120000,
 	"git.autofetch": true,
 	"git.enableSmartCommit": true,
 	"git.openRepositoryInParentFolders": "always",
