--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -12,7 +12,7 @@
 	"editor.renderWhitespace": "trailing",
 	"editor.renderLineHighlight": "gutter",
 	"editor.lineHeight": 1.2,
-	"editor.codeActionsOnSave": {},
+	"editor.codeActionsOnSave": { },
 	"editor.fontFamily": "FiraCode Nerd Font",
 	"editor.fontLigatures": true,
 	"editor.insertSpaces": false,
@@ -241,8 +241,8 @@
 		"rgba(255,127,255,0.07)",
 		"rgba(79,236,236,0.07)"
 	],
-	"vscode-neovim.ctrlKeysForInsertMode": [],
-	"vscode-neovim.ctrlKeysForNormalMode": [],
+	"vscode-neovim.ctrlKeysForInsertMode": [ ],
+	"vscode-neovim.ctrlKeysForNormalMode": [ ],
 	"vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
 	"outline.showArrays": false,
 	"outline.showBooleans": false,
@@ -942,9 +942,8 @@
 	"cursor.chat.showSuggestedQuestions": true,
 	"cursor.chat.maxCompletionTokens": 4000,
 	"cursor.chat.contextLength": 8000,
-	"cursor.cpp.enablePartialAccepts": true,
 	"cursor.cpp.partialAcceptThreshold": 0.5,
-	"cursor.cpp.disabledLanguages": [],
+	"cursor.cpp.disabledLanguages": [ ],
 	"cursor.cpp.maxPrefixLengthForSingleLine": 100,
 	"cursor.cpp.maxSuffixLengthForSingleLine": 100,
 	"cursor.cpp.enablePartialAcceptsInSnippetMode": true,
@@ -995,5 +994,7 @@
 	"gitlens.codeLens.enabled": false,
 	"gitlens.hovers.enabled": false,
 	"diffEditor.renderSideBySide": true,
-	"merge-conflict.autoNavigateNextConflict.enabled": true
+	"merge-conflict.autoNavigateNextConflict.enabled": true,
+	"cursor.composer.textSizeScale": 1.15,
+	"cursor.composer.shouldChimeAfterChatFinishes": true
 }
