--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -12,7 +12,7 @@
 	"editor.renderWhitespace": "trailing",
 	"editor.renderLineHighlight": "gutter",
 	"editor.lineHeight": 1.2,
-	"editor.codeActionsOnSave": { },
+	"editor.codeActionsOnSave": {},
 	"editor.fontFamily": "FiraCode Nerd Font",
 	"editor.fontLigatures": true,
 	"editor.insertSpaces": false,
@@ -56,13 +56,6 @@
 		"comments": "off",
 		"strings": "off"
 	},
-	"explorer.openEditors.visible": 1,
-	"explorer.decorations.badges": false,
-	"explorer.decorations.colors": true,
-	"explorer.confirmDelete": false,
-	"explorer.confirmDragAndDrop": false,
-	"files.enableTrash": false,
-	"files.confirmDelete": false,
 	"extensions.experimental.deferredStartupFinishedActivation": true,
 	"extensions.experimental.affinity": {
 		"asvetliakov.vscode-neovim": 1
@@ -70,6 +63,9 @@
 	"extensions.ignoreRecommendations": true,
 	"extensions.autoCheckUpdates": true,
 	"extensions.autoUpdate": true,
+	"explorer.confirmDelete": false,
+	"explorer.confirmDragAndDrop": false,
+	"files.enableTrash": false,
 	"files.hotExit": "onExitAndWindowClose",
 	"files.simpleDialog.enable": true,
 	"files.exclude": {
@@ -241,8 +237,8 @@
 		"rgba(255,127,255,0.07)",
 		"rgba(79,236,236,0.07)"
 	],
-	"vscode-neovim.ctrlKeysForInsertMode": [ ],
-	"vscode-neovim.ctrlKeysForNormalMode": [ ],
+	"vscode-neovim.ctrlKeysForInsertMode": [],
+	"vscode-neovim.ctrlKeysForNormalMode": [],
 	"vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
 	"outline.showArrays": false,
 	"outline.showBooleans": false,
@@ -919,6 +915,12 @@
 		"editor.defaultFormatter": "cweijan.vscode-database-client2"
 	},
 	"javascript.suggest.autoImports": true,
+	"javascript.updateImportsOnFileMove.enabled": "always",
+	"javascript.preferences.useAliasesForRenames": false,
+	"javascript.format.insertSpaceAfterConstructor": true,
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
+	"javascript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[javascript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
@@ -926,7 +928,7 @@
 	"typescript.preferences.useAliasesForRenames": false,
 	"typescript.suggest.autoImports": true,
 	"typescript.preferences.quoteStyle": "single",
-	"typescript.tsserver.log": "off",
+	"typescript.tsserver.log": "terse",
 	"typescript.inlayHints.parameterNames.enabled": "all",
 	"typescript.inlayHints.propertyDeclarationTypes.enabled": true,
 	"typescript.tsserver.maxTsServerMemory": 8096,
@@ -935,47 +937,14 @@
 	"typescript.autoClosingTags": true,
 	"typescript.disableAutomaticTypeAcquisition": true,
 	"typescript.tsserver.useSyntaxServer": "always",
+	"typescript.format.insertSpaceAfterConstructor": true,
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
+	"typescript.format.insertSpaceBeforeFunctionParenthesis": true,
+	"typescript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"cursor.chat.alwaysSearchWeb": false,
-	"cursor.chat.showSuggestedQuestions": true,
-	"cursor.chat.maxCompletionTokens": 4000,
-	"cursor.chat.contextLength": 8000,
-	"cursor.cpp.partialAcceptThreshold": 0.5,
-	"cursor.cpp.disabledLanguages": [ ],
-	"cursor.cpp.maxPrefixLengthForSingleLine": 100,
-	"cursor.cpp.maxSuffixLengthForSingleLine": 100,
-	"cursor.cpp.enablePartialAcceptsInSnippetMode": true,
-	"cursor.general.enableModelSelection": true,
-	"cursor.general.defaultModel": "claude-4-sonet",
-	"cursor.general.fastModel": "gpt-4o-mini",
-	"cursor.privacy.anonymizedTelemetry": true,
-	"cursor.privacy.enableTelemetry": false,
-	"cursor.general.enableIndexing": true,
-	"cursor.general.enableDocs": true,
-	"cursor.general.enableShadowWorkspace": true,
-	"cursor.general.enableAutoSaveBeforeChat": true,
-	"cursor.general.enableCodeLens": true,
-	"cursor.chat.showChatWelcomeMessage": false,
-	"cursor.general.enableInlineChat": true,
-	"cursor.general.enableComposer": true,
-	"cursor.general.showComposerInSidebar": true,
-	"cursor.general.enableDiff": true,
-	"cursor.general.enableSyntaxHighlighting": true,
-	"cursor.general.enableAutoApply": false,
-	"cursor.general.enableSmartSelection": true,
-	"cursor.general.enableCursorless": false,
-	"cursor.general.enableMultipleProviders": true,
-	"cursor.general.enableCustomInstructions": true,
-	"cursor.general.enableWorkspaceContext": true,
-	"cursor.general.enableGitContext": true,
-	"cursor.general.enableFileContext": true,
-	"cursor.general.maxFileContextLength": 20000,
-	"cursor.general.requestTimeout": 120000,
-	"cursor.general.disableTimeouts": true,
-	"cursor.general.maxRequestDuration": 300000,
-	"cursor.cpp.requestTimeout": 120000,
 	"git.autofetch": true,
 	"git.enableSmartCommit": true,
 	"git.openRepositoryInParentFolders": "always",
@@ -994,7 +963,5 @@
 	"gitlens.codeLens.enabled": false,
 	"gitlens.hovers.enabled": false,
 	"diffEditor.renderSideBySide": true,
-	"merge-conflict.autoNavigateNextConflict.enabled": true,
-	"cursor.composer.textSizeScale": 1.15,
-	"cursor.composer.shouldChimeAfterChatFinishes": true
+	"merge-conflict.autoNavigateNextConflict.enabled": true
 }
