--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -10,7 +10,7 @@
 	"editor.tabSize": 2,
 	"editor.fontSize": 14,
 	"editor.renderWhitespace": "trailing",
-	"editor.renderLineHighlight": "gutter",
+	"editor.renderLineHighlight": "line",
 	"editor.lineHeight": 1.2,
 	"editor.codeActionsOnSave": { },
 	"editor.fontFamily": "FiraCode Nerd Font",
@@ -165,7 +165,8 @@
 			"input.background": "#0c0c0c",
 			"editorError.background": "#0c0c0c00",
 			"editorWarning.background": "#0c0c0c00",
-			"editorInfo.background": "#0c0c0c00"
+			"editorInfo.background": "#0c0c0c00",
+			"editor.lineHighlightBackground": "#1d1d1d"
 		}
 	},
 	"window.density.editorTabHeight": "compact",
