--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1015,5 +1015,6 @@
 	"merge-conflict.autoNavigateNextConflict.enabled": true,
 	"[php]": {
 		"editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-	}
+	},
+	"workbench.statusBar.visible": false
 }
